# folksonomy_api

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  PROPERTY_SYSTEM.md  README.md  db-connect.sh  db-migration.py  docker-compose.yml  generate_openapi_json.py  launch_tests.sh  loacal_settings_example.py  local_settings_docker_example.py  local_settings_example.py  openapi.json  pyproject.toml  requirements.txt  start_postgres.sh  yoyo.ini
.github/: dependabot.yml  labeler.yml
.github/workflows/: auto-assign-pr.yml  codeql-analysis.yml  crunch42-analysis.txt  crunch42-analysis.yml  generate-client.yml  github-projects.yml  label.yml  lint.yml  mayhem-for-api-analysis.txt  mayhem-for-api-analysis.yml  ossar-analysis.yml  pull-request.yml  release-please.yml  semantic-pr.yml  top-issues.yml  validation.yml
confs/systemd/: folksonomy.service
data/properties/: INTEGRATION.md  README.md  allergen_free.yaml  best_before_date_format.yaml  caffeine_content.yaml  color.yaml  maturity_level.yaml  organic.yaml  recyclable_packaging.yaml  scoville_scale.yaml  serving_temperature.yaml  storage_capacity.yaml
db/: db-migration.py  db_settings.py  db_setup.sql
db/migrations/: 000-init-db.sql  001-change-barcodedef.py  002-remove-trailing-spaces-in-values.sql  change-barcodedef.py  (+1 more)
docker/: dev.yml  entrypoint.sh  healthcheck.sh
folksonomy/: api.py  db.py  dependencies.py  knowledge_panels.py  models.py  property_loader.py  settings.py  utils.py
tests/: test_main.py  test_properties.py
(+8 files in other folders)
